[package]
name = "wgpu_surfaces"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bytemuck = { version = "1.23.2", features = [ "derive" ] }
cgmath = "0.18.0"
env_logger = "0.11.8"
log = "0.4.28"
pollster = "0.4.0"
rand = "0.9.2"
wgpu = "26.0.1"
winit = "0.30.12"

[[example]]
name = "simple_surface"
path = "ch02/01_simple_surface/main.rs"

[[example]]
name = "multiple_simple_surfaces"
path = "ch02/02_multiple_simple_surfaces/main.rs"

[[example]]
name = "parametric_surface"
path = "ch03/01_parametric_surface/main.rs"

[[example]]
name = "multiple_parametric_surfaces"
path = "ch03/02_multiple_parametric_surfaces/main.rs"